# safeRun

./: .gitignore  Cargo.toml  README.md  build_and_add.sh  ignore.txt  patterns.txt  pre-commit-sample  settings.json  setup.sh  test.sh  update_log.txt
src/: (not working) gitInt.sh  gitInit.sh  gitInt.sh  main.rs  structs.rs  utils.rs  utils_rw.rs  wsj.rs
